fix: ref button register in login

--- a/src/app/auth/page/login/login.component.html
+++ b/src/app/auth/page/login/login.component.html
@@ -37,7 +37,7 @@
         La contraseña es requerida.
       </div>
       <button type="submit">Ingresar</button>
-      <p>¿Aún no tienes cuenta? <a href="">¡Regístrate!</a></p>
+      <p>¿Aún no tienes cuenta? <a href="http://localhost:4200/register">¡Regístrate!</a></p>
     </form>
   </div>
 </div>
