--- a/src/app/auth/page/register/register.component.html
+++ b/src/app/auth/page/register/register.component.html
@@ -23,7 +23,7 @@
           id="rut"
           formControlName="rut"
           class="form-control"
-          placeholder="xx.xx.xx-x"
+          placeholder="xxxxxx-x"
         />
 
         <div
