--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main>
   <header class="shop-header">
     <div class="logo-container">
-      <img src="./assets/logoUCN.png" alt="Logo UCN" class="logo">
+      <img src="../assets/logoUCN.png alt="Logo UCN" class="logo">
       <span class="shop-title">Shop</span>
     </div>
     <div class="search-bar-container">
