--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,68 +1,76 @@
-/* General Reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  /* Header */
-  .shop-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #2c5379; /* Azul oscuro */
-    padding: 10px 20px;
-  }
-  
-  /* Logo */
-  .logo-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-  }
-  
-  .shop-title {
-    font-size: 1.5rem;
+
+/* Header */
+.shop-header {
+display: flex;
+align-items: center;
+justify-content: space-between;
+background-color: #2c5379; /* Azul oscuro */
+padding: 10px 20px;
+margin-bottom: 30px;
+}
+
+/* Logo */
+.logo-container {
+display: flex;
+align-items: center;
+}
+
+.logo {
+width: 40px;
+height: 40px;
+margin-right: 10px;
+}
+
+.shop-title {
+font-size: 1.5rem;
+color: white;
+font-family: Arial, sans-serif;
+font-weight: bold;
+}
+
+/* Search Bar */
+.search-bar-container {
+flex-grow: 1;
+margin: 0 20px;
+}
+
+.search-bar {
+width: 100%;
+padding: 8px 12px;
+border-radius: 20px;
+border: none;
+outline: none;
+font-size: 1rem;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Icons */
+.icon-container {
+display: flex;
+align-items: center;
+gap: 15px;
+}
+
+.icon {
+font-size: 1.5rem;
+color: white;
+cursor: pointer;
+}
+
+.icon:hover {
+color: #2C5477; /* Azul claro al pasar el ratón */
+}
+
+.footerShop{
+display: center;
+align-items: center;
+justify-content: space-between;
+background-color: #2C5477; /* Azul oscuro */
+padding: 10px 20px;
+margin-top: 50px;
+}
+
+.footerShop p{
     color: white;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-  }
-  
-  /* Search Bar */
-  .search-bar-container {
-    flex-grow: 1;
-    margin: 0 20px;
-  }
-  
-  .search-bar {
-    width: 100%;
-    padding: 8px 12px;
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    font-size: 1rem;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Icons */
-  .icon-container {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-  }
-  
-  .icon {
-    font-size: 1.5rem;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .icon:hover {
-    color: #2c79ff; /* Azul claro al pasar el ratón */
-  }
-  
+    text-align: center;
+}
